Fix newsletter CTA background position on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -697,7 +697,6 @@ input:focus {
 
   #newsletter {
     height: 350px;
-    background-position-x: 0px;
     background-position: top right;
   }
 
